Fix jumping checkbox focus ring
Bug: 361008594
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/5806965
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Benedikt Meurer <bmeurer@chromium.org>

--- a/front_end/ui/legacy/inspectorCommon.css
+++ b/front_end/ui/legacy/inspectorCommon.css
@@ -268,6 +268,10 @@ input {
 
   &[type="checkbox"] {
     position: relative;
+    outline: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
     &:hover::after,
     &:active::before {
@@ -276,8 +280,6 @@ input {
       width: 24px;
       border-radius: var(--sys-shape-corner-full);
       position: absolute;
-      top: -6px;
-      left: -6px;
     }
 
     &:not(.-theme-preserve) {
@@ -293,28 +295,19 @@ input {
       background-color: var(--sys-color-state-ripple-neutral-on-subtle);
     }
 
-    &:not(:disabled):focus-visible {
-      outline: none;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-
-      &::before {
-        content: "";
-        height: 15px;
-        width: 15px;
-        border-radius: 5px;
-        position: absolute;
-        border: 2px solid var(--sys-color-state-focus-ring);
-      }
+    &:not(:disabled):focus-visible::before {
+      content: "";
+      height: 15px;
+      width: 15px;
+      border-radius: 5px;
+      position: absolute;
+      border: 2px solid var(--sys-color-state-focus-ring);
     }
 
     &.small:hover::after,
     &.small:active::before {
       height: 12px;
       width: 12px;
-      top: 0;
-      left: 0;
       border-radius: 2px;
     }
   }
